# stella_vslam

./: CMakeLists.txt  Dockerfile.desktop  Dockerfile.socket
src/stella_vslam/: CMakeLists.txt  global_optimization_module.cc  mapping_module.cc  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/stella_vslam/data/: map_database.cc  map_database.h
src/stella_vslam/feature/: CMakeLists.txt  orb_extractor.cc  orb_extractor.h
src/stella_vslam/feature/cuda/: Allocator.cu  Allocator.hpp  CMakeLists.txt  Cuda.cu  Cuda.hpp  Fast.cu  Fast.hpp  Orb.cu  Orb.hpp
src/stella_vslam/io/: map_database_io_base.h  map_database_io_msgpack.cc  map_database_io_msgpack.h  map_database_io_sqlite3.cc  map_database_io_sqlite3.h  trajectory_io.cc
src/stella_vslam/module/: keyframe_inserter.cc  local_map_cleaner.cc  loop_bundle_adjuster.cc
src/stella_vslam/optimize/: graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster_g2o.cc  local_bundle_adjuster_gtsam.cc
